# VNFPTU-ASR

./: .gitignore  .pre-commit-config.yaml  README.md  mlflow.db  pyproject.toml
asr/chunkformer/: example.sh
asr/chunkformer/data/: 129c8303-cba1-4a60-b223-5d811887b2bd.aac
asr/phowhisper/: README.md  cli.py  sweep.yaml
configs/: requirements-gpu.txt  requirements.txt
docs/: phowhisper_large_eval_results_centralv0.txt  ref.txt  wer_history.json
eval/: phowhisper_large_vi_all.py  phowhisper_large_vi_north.py  wav2vec_base_vi_vo.py
logs/: eval_results_all.txt  eval_results_phowhisper-large-north-vi_north.txt  eval_results_phowhisper-large-south-vi_south.txt
others/eval/: phowhisper_large_vi_all.py  phowhisper_large_vi_central.py  phowhisper_large_vi_north.py  phowhisper_large_vi_south.py
others/train/: phowhisper_large_vi_central_v0.py  wav2vec_base_vi_v0.py
train/: phowhisper_large_vi_all_v0.py  phowhisper_large_vi_central_v0.py  phowhisper_large_vi_north_v0.py  phowhisper_large_vi_south_v0.py  wav2vec_base_vi_v0.py
wandb/: latest-run
wandb/run-20250629_035237-pviha114/: run-pviha114.wandb
wandb/run-20250629_035808-lwe2cecs/: run-lwe2cecs.wandb
wandb/run-20250629_040518-xgc3dllj/: run-xgc3dllj.wandb
wandb/run-20250629_040845-2noj8orf/: run-2noj8orf.wandb
wandb/run-20250629_041157-kbc4lzyd/: run-kbc4lzyd.wandb
wandb/run-20250629_042219-kvjyp5n2/: run-kvjyp5n2.wandb
wandb/run-20250629_042326-yj610tus/: run-yj610tus.wandb
wandb/run-20250629_045353-aqir3jow/: run-aqir3jow.wandb
wandb/run-20250629_052442-q5bzznsz/: run-q5bzznsz.wandb
wandb/run-20250629_061739-wnsg4skh/: run-wnsg4skh.wandb
(+36 files in other folders)
