[project]
name = "vnfptu-asr-finetune"
version = "0.1.0"
description = "Fine-tuning ASR models like Whisper with PEFT and bitsandbytes."
authors = [
    { name = "Pham Minh Tien", email = "phamminhtien2405@gmail.com" },
]
requires-python = ">=3.10"

dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "transformers>=4.41.0",
    "accelerate>=0.31.0",
    "datasets>=2.19.0",
    "evaluate>=0.4.0",
    "peft>=0.11.0",
    "bitsandbytes>=0.43.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "jiwer>=3.0.0",
    "mlflow>=2.14.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pre-commit",
]

[tool.setuptools]
packages = ["train", "eval", "configs"]
