[project]
name = "vnfptu-asr-finetune"
version = "0.1.0"
description = "Fine-tuning ASR models like Whisper with PEFT and bitsandbytes."
authors = [
    { name = "Pham Minh Tien", email = "phamminhtien2405@gmail.com" },
]
requires-python = ">=3.10"

dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "transformers",
    "accelerate",
    "datasets",
    "evaluate",
    "peft",
    "bitsandbytes",
    "librosa",
    "soundfile",
    "jiwer",
    "mlflow",
    "python-dotenv",
    "pyyaml",
    "click",
    "wandb",
    "numpy",
    "thop",
    "whisperx @ git+https://github.com/m-bain/whisperX.git",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pre-commit",
]

[tool.setuptools]
packages = ["train", "eval", "configs", "ASR"]
